2008-04-11  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/xy/XIntervalSeries.java
    (getXLowValue): New method,
    (getXHighValue): Likewise.

2008-04-08  David Gilbert  <david.gilbert@object-refinery.com>

    Bug 1932146:
    * source/org/jfree/chart/axis/PeriodAxis.java
    (setRange): Notify listeners,
    * tests/org/jfree/chart/axis/junit/PeriodAxisTests.java
    (lastEvent): New field,
    (axisChanged): New method,
    (test1932146): New test method.

2008-04-08  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/xy/HighLowRenderer.java
    (findRangeBounds): New method override.

2008-04-08  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/xy/CandlestickRenderer.java
    (findRangeBounds): New method override,
    * source/org/jfree/data/general/DatasetUtilities.java
    (iterateRangeBounds(XYDataset)): Fixed typo for OHLCDataset.

2008-04-08  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/block/BorderArrangement.java
    (arrangeFF): Check for negative width remaining.

2008-04-08  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/block/ColorBlock.java
    (arrange): New method override,
    (draw): Add code for margin, border and padding,
    * source/org/jfree/chart/block/EmptyBlock.java
    (arrange): New method override,
    (draw(Graphics2D, Rectangle2D)): Delegate,
    (draw(Graphics2D, Rectangle2D, Object)): New method override.

2008-04-07  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/time/TimePeriodValue.java
    (toString): New method override,
    * source/org/jfree/data/time/TimePeriodValues.java
    (updateBounds): Update maxMiddleIndex correctly,
    * tests/org/jfree/data/time/junit/TimePeriodValues.java
    (testGetMinStartIndex): New test method,
    (testGetMaxStartIndex): Likewise,
    (testGetMinMiddleIndex): Likewise,