@@ -1,3 +1,9 @@
+2008-04-11  David Gilbert  <david.gilbert@object-refinery.com> 
+
+    * source/org/jfree/data/xy/XIntervalSeriesCollection.java
+    (getStartXValue): New method override,
+    (getEndXValue): Likewise.
+
 2008-04-11  David Gilbert  <david.gilbert@object-refinery.com>
 
     * source/org/jfree/data/xy/XIntervalSeries.java
